--- a/stylesheets/image.css
+++ b/stylesheets/image.css
@@ -22,4 +22,11 @@ img{
   border: 5px, solid, #000;
   float: left;
   display: inline;
+  margin-right: 10px;
+}
+
+#links{
+  border: 5px, solid, #000;
+  padding: 20px;
+  float: left;
 }
