--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -1,6 +1,6 @@
 header{
   background-image: url(../images/header/all.jpg);
-  width 100%
+  width: 100%;
   
 }
 
@@ -10,4 +10,9 @@ img{
 
 .article{
   border: 5px, solid, #000;
+}
+
+#nav{
+  width: 100%;
+  background-color: red;
 }
