--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -5,13 +5,15 @@ header{
 }
 
 img{
-  border 5px, solid, #000
+  border: 5px, solid, #000;
 }
 
 .article{
   border: 5px;
   border-style: solid;
   border-color: #000;
+  width: 40%;
+  height: 20%;
 }
 
 #nav{
