--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -6,19 +6,21 @@ header{
 
 img{
   border: 5px, solid, #000;
+  margin: 10px;
 }
 
 .article{
   border: 5px;
   border-style: solid;
   border-color: #000;
-  width: 40%;
-  height: 20%;
+  width: 200px;
+  height: 150px;
+  margin: 10px;
 }
 
 #nav{
   width: 100%;
   background-color: red;
   text-align: center;
-  font-size:20px;
+  font-size:32px;
 }
