--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -13,8 +13,8 @@ img{
   border: 5px;
   border-style: solid;
   border-color: #000;
-  width: 200px;
-  height: 150px;
+  width: 40%;
+  height: 20%;
   margin: 10px;
 }
 
