--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -1,7 +1,7 @@
 body{
   width: 960px;
   margin: auto;
-  background-color: black;
+  background-color: ;
 }
 
 header{
@@ -28,6 +28,7 @@ img{
 
 #nav{
   width: 100%;
+  height: 10%;
   background-color: red;
   text-align: center;
   font-size:32px;
