--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -24,10 +24,33 @@ img{
   float: left;
 }
 
-#nav{
+.nav{
   width: 100%;
   height: 40px;
-  background-color: red;
   text-align: center;
   font-size:32px;
+}
+
+#beauty,#gaming,#image,#youtube{
+  border: 5px solid;
+  padding: 10px;
+  width: 10%;
+  border-radius: 10px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius:10px;
+}
+#beauty{
+  background-color: purple;
+  }
+  
+#gaming{
+  background-color: ;
+}
+
+#image{
+  background-color: #008B8B;
+}
+
+#youtube{
+  background-color: red;
 }
