--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -12,7 +12,7 @@ header{
 img{
   border: 5px, solid, #000;
   margin: 10px;
-  float:left;
+
 }
 
 .article{
@@ -22,6 +22,7 @@ img{
   width: 40%;
   height: 20%;
   margin: 10px;
+  float: right;
 }
 
 
