--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -12,9 +12,6 @@ header{
   left: 5%;
 }
 
-img{
-  border: 5px, solid, #000;
-  margin: 10px;
 
 }
 
@@ -36,9 +33,13 @@ img{
   right:20%;
 }
 
+#imag1{
+  border: 5px dotted #008B8B;
+}
 #imag2{
   position: relative;
   left: 10%;
+  border: 5px solid red;
 }
 
 
