--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -15,7 +15,7 @@ header{
 .article{
   border: 5px;
   border-style: solid;
-  border-color: #000;
+  border-color: red;
   width: 40%;
   height: 20%;
   margin: 10px;
