--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -26,7 +26,7 @@ header{
   margin: 10px;
   float: right;
   position: relative;
-  top:center;
+  top:70%;
   right:20%;
   border: 5px dotted #008B8B;
 }
