--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -16,10 +16,11 @@ header{
   border: 5px;
   border-style: solid;
   border-color: red;
-  width: 40%;
+  width: 50%;
   height: 20%;
   margin: 10px;
   float: left;
+  padding: 5px;
 }
 
 #a2{
