--- a/stylesheets/image.css
+++ b/stylesheets/image.css
@@ -5,6 +5,7 @@ body{
   width: 100%;
   background-color: purple;
   font-size: 32px;
+  text-align:center;
 }
 .beauty, .vlog,.gaming{
 border: 5px, solid, #000;
