--- a/stylesheets/image.css
+++ b/stylesheets/image.css
@@ -38,7 +38,9 @@ img{
 }
 
 #links{
-  border: 5px, solid, #000;
+  border: 5px solid #000;
   padding: 20px;
   float: left;
+  position:relative;
+  right: 5%;
 }
