--- a/stylesheets/image.css
+++ b/stylesheets/image.css
@@ -2,6 +2,7 @@
 #wrapper{
   width:960px;
   background-image:url(../images/imagegallery/background.jpg);
+  margin: auto;
 }
 
 #links{
@@ -16,6 +17,7 @@
   width: 100%;
   text-align: center;
   font-size: 32px;
+  background-color: purple;
   }
   
   .beauty,.vlog,.gaming{
@@ -35,3 +37,15 @@
   .gaming{
     background-color:#008B8B;
   }
+  
+  #links{
+    border: 5px dotted #000;
+    float: right;
+    position: relative;
+    right: 5%;
+  }
+
+a{
+  text-decoration: none;
+  color: black;
+}
