--- a/stylesheets/image.css
+++ b/stylesheets/image.css
@@ -17,7 +17,7 @@
   width: 100%;
   text-align: center;
   font-size: 32px;
-  background-color: purple;
+  background-color: orange;
   }
   
   .beauty,.vlog,.gaming{
