--- a/stylesheets/image.css
+++ b/stylesheets/image.css
@@ -7,8 +7,11 @@
 
 #links{
   border: 2px solid #000;
-  display: inline;
+  width:100%;
+  text-align:center;
+  font-size:26px;
   font-size:20px;
+  background-color:blue;
 }
 
 .title{
