--- a/stylesheets/article.css
+++ b/stylesheets/article.css
@@ -4,6 +4,7 @@ body{
 #wrapper{
   width:960px;
   background-color:white;
+  margin:auto;
 }
 
 .headline{
@@ -23,4 +24,9 @@ body{
 }
 a{
   text-decoration:none;
+}
+.r2{
+  float:right;
+  position:relative;
+  right: 5%;
 }
